name:                   haskellmade-hero
version:                0.0.1.0
synopsis:               Haskell translation for Casey Muratori's Handmade Hero series. 
description:            Please see README.md
homepage:               http://github.com/oldmanmike/haskellmade-hero.git
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             Michael Carpenter <oldmanmike.dev@gmail.com>
-- copyright:           
category:               Game
build-type:             Simple
-- extra-source-files:  
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Handmade
  build-depends:        base >= 4.7 && < 5
  default-language:     Haskell2010

executable game
  hs-source-dirs:       game
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base,
                        haskellmade-hero,
                        sdl2
  default-language:     Haskell2010

test-suite haskellmade-hero-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                        , new-template
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/haskellmade-hero.git
